k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-api-service
spec:
  type: ClusterIP
  selector:
    app: auction-api
  ports:
    - protocol: TCP
      port: 4400
      targetPort: 4400
