k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auction-api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: auction.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auction-api-service
                port:
                  number: 4400
